crates/compiler/tests/parse_errors/comment_end.elm
module Main exposing (..)

{- unterminated
x = 1
